# vdir

./: .cliffignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  shell.nix
src/: collection.rs  constants.rs  item.rs  lib.rs
src/coroutines/: create-collection.rs  create-item.rs  delete-collection.rs  delete-item.rs  list-collections.rs  list-items.rs  mod.rs  read-item.rs  update-collection.rs  update-item.rs
src/flows/: create-collection.rs  create-item.rs  delete-collection.rs  delete-item.rs  list-collections.rs  list-items.rs  mod.rs  read-item.rs  save-collection.rs  save-item.rs  update-collection.rs  update-item.rs
tests/: list-collections.rs  std.rs  std_flows.rs
